<resources>
    <string name="app_name">Ежедневник</string>

    <string name="business_name">Название</string>
    <string name="business_description">Описание</string>
    <string name="from">С</string>
    <string name="to">До</string>
    <string name="delete_button_text">Удалить</string>
    <string name="save_button_text">Сохранить</string>
    <string name="change_button_text">Изменить</string>
    <string name="add_button_text">Добавить</string>
    <string name="empty_todo_list">У вас нет запланированных дел на этот день</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="tomorrow">Завтра</string>

    <!-- Toasts -->
    <string name="save_toast">Дело успешно сохранено</string>
    <string name="delete_toast">Дело "%s" удалено</string>

    <!-- Exceptions -->
    <string name="incorrect_time_exception">Указано некорректное время</string>
    <string name="empty_field_exception">%s необходимо к заполнению</string>

    <!-- Alert Dialogs -->
    <string name="delete_business_alert_dialog_title">Вы действительно хотите удалить это дело?</string>
    <string name="delete_business_alert_dialog_message">После удаления вы не сможете восстановить это дело</string>

</resources>